# hass-sevi-cloud

./: .env.example  .gitignore  .ruff.toml  Makefile  README.md  hacs.json  openapi.json  pyproject.toml  requirements_test.txt
.github/workflows/: lint.yml  tests.yml  validate.yml
custom_components/sevi_cloud/: __init__.py  api.py  button.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  fan.py  manifest.json  number.py  sensor.py  strings.json  switch.py
custom_components/sevi_cloud/translations/: en.json
tests/: __init__.py  conftest.py  test_api.py  test_api_live.py  test_config_flow.py  test_coordinator.py  test_fan.py  test_init.py  test_sensor_button_number.py  test_switch.py
